fixed document generation and rest api. Removed debugging from cards in the staff url

--- a/src/app.html
+++ b/src/app.html
@@ -16,10 +16,11 @@
 	body{
 
 		/*rotate the background 90 degrees*/
-		background: lightgrey;
+		background: lightslategrey;
 		background-size: cover;
 		background-position: center;
 		min-height: 100vh;
+		overflow: hidden;
 	}
 
 </style>
