--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,7 @@
 	body{
 
 		/*rotate the background 90 degrees*/
-		background: lightslategrey;
+		background: #7a8b9b;
 		background-size: cover;
 		background-position: center;
 		overflow-y: hidden;
